# csv2pg-ai-schema-infer

./: .env.bak  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  HOW_TO_VALIDATE.md  IMPLEMENTATION_SUMMARY.md  IMPORT_INSTRUCTIONS.md  LICENSE  PLAN.md  README.md  TESTS.md  VALIDATION_REPORT.md  VALIDATION_RESULTS.md  conversationplan.md  example.env  pyproject.toml  schema_comparison_report.txt  test_gemini.py
.github/workflows/: ci.yml  codeql.yml  release.yml
config/: default.yaml
scripts/: check_completeness.py  validate_project.sh  validate_schema_comparison.py
src/csv2pg/: __init__.py  types.py
src/csv2pg_ai_schema_infer/: __init__.py  chunker.py  cli.py  config.py  generator.py  inference.py  sampler.py  state_manager.py  types.py
src/csv2pg_ai_schema_infer/llm/: __init__.py  base.py  gemini.py
src/csv2pg_ai_schema_infer/templates/: import.sh.jinja2  pgloader.jinja2
src/csv2pg_ai_schema_infer/utils/: __init__.py  logger.py  validation.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_chunker.py  test_config.py  test_sampler.py
